--- a/config.yaml
+++ b/config.yaml
@@ -2,3 +2,7 @@ server:
   port: 8080
 log:
   level: debug
+routes:
+  - method: "GET"
+    path: "/api/test"
+    target: "https://httpbin.org/get"
